--- a/views/dialog.jade
+++ b/views/dialog.jade
@@ -1,9 +1,9 @@
 #task-create
     p Create a new task!
-    textarea Task description
+    textarea#task-description Task description
     br
-    input(type="text") Deadline
+    input#task-deadline(type="text", value="Deadline")
     br
-    input(type="text") Owner
+    input#task-assigned-to(type="text", value="Assigned To")
     br
-    button Create
+    button#create-task Create
