--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
-textarea#task-area
-button#submit-task Submit
+textarea#message-area
+button#submit-message Submit
 - each message in messages
     include message
 include dialog
