initial task frontend (i.e. the placeholders were removed)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,3 +53,18 @@ a {
 #task-create {
     display: none;
 }
+.task {
+    border: 1px solid green;
+    background-color: #fff;
+}
+.task .details {
+    display: none;
+}
+.task .id {
+    font-size: 16px;
+    font-weight: bolder;
+    color: green;
+}
+.task .id:before {
+    content: ">>> ";
+}
