--- a/views/task.jade
+++ b/views/task.jade
@@ -1,5 +1,5 @@
-.task
+span.task-label= task.id
+.task-details
     .id= task.id
-    .details
-        .date= task.date
-        .content= task.content
+    .date= task.date
+    .content= task.content
