--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,7 @@ a {
 #main-container {
     width: 960px;
     margin: 0 auto;
+    margin-top: 30px;
 }
 #message-area {
     width: 100%;
@@ -23,9 +24,6 @@ a {
     position: absolute;
     left: 15px;
     top: 15px;
-    width: 100px;
-    height: 50px;
-    background-color: black;
 }
 #log-in {
     position: absolute;
@@ -54,16 +52,17 @@ a {
     display: none;
 }
 .task-label {
-    border: 1px solid green;
-    background-color: #eee;
-    color: green;
     cursor:  pointer;
-}
-.task-label:before {
-    content: "\00BB";
+    background-image: url(/images/label-default.png);
+    width: 49px;
+    height: 16px;
+    overflow: hidden;
+    display: inline-block;
+    font-size: 12px;
+    text-align: center;
 }
 .task-label:hover {
-    background-color: #ccc;
+    background-image: url(/images/label-default-hover.png);
 }
 .task-details {
     display: none;
