--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
         script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js')
         script(type='text/javascript', src='/javascripts/script.js')
     body
-        #logo
+        a#logo(href='/')
+            img(src='/images/logo.png')
         a#log-in(href="javascript:void(0)") Log In
         #main-container!= body
