added login support

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,5 +10,5 @@ html
     body
         a#logo(href='/')
             img(src='/images/logo.png')
-        a#log-in(href="javascript:void(0)") Log In
+        a#log-out(href="javascript:void(0)") Log out
         #main-container!= body
