added task comments + date formatting

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,4 +72,8 @@ a {
     position: absolute;
     background-color: #aaa;
     border: 3px solid green;
+    min-width: 400px;
+}
+ul.comments, ul.comments li {
+    min-width: 300px;
 }
