--- a/views/dialog.jade
+++ b/views/dialog.jade
@@ -1,5 +1,7 @@
 #task-create
     p Create a new task!
+    input#task-title(type="text", value="Title")
+    br
     textarea#task-description Task description
     br
     input#task-deadline(type="text", value="Deadline")
