--- a/views/task.jade
+++ b/views/task.jade
@@ -1,5 +1,16 @@
 span.task-label= task.id
 .task-details
     .id= task.id
-    .date= task.date
+    .date #{date_format(task.date)}
     .content= task.content
+    ul.comments
+        each comment in task.comments
+            li
+                .author= comment.author
+                .date #{date_format(comment.date)}
+                .content= comment.content
+    form.add-comment
+        input(type="hidden", name="task-id", value=task.id)
+        textarea(name="comment").text
+        br
+        input(type="submit", value="Add Comment").submit
