--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,4 +11,7 @@ html
         a#logo(href='/')
             img(src='/images/logo.png')
         a#log-out(href="javascript:void(0)") Log out
+        .links
+            a#message-view-link(href="/") Message View
+            a#task-view-link(href="/tasks/") Task View
         #main-container!= body
