started replacing the textarea with a contenteditable div

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,6 @@
-textarea#message-area
+// textarea#message-area
+#message-area(contenteditable="true")
+#autosuggest
 button#submit-message Submit
 i#tip Tip: type "::" into the text area to select a task or ":::" to create a new one. Also, you can use standard markdown to format your text.
 each message in messages
