--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,10 +19,6 @@ a {
     margin: 0 auto;
     margin-top: 30px;
 }
-#message-area {
-    width: 100%;
-    height: 200px;
-}
 #logo {
     position: absolute;
     left: 15px;
@@ -272,6 +268,7 @@ a {
 .task-view-page .task ul.comments li {
     border-left: 2px solid #ddd;
     margin-top: 7px;
+    padding: 4px;
 }
 .task-view-page .task ul.comments li .author {
     font-size: 10px;
@@ -300,4 +297,32 @@ a {
     right: 0;
     position: absolute;
     display: none;
+}
+#message-area {
+    width: 100%;
+    min-height: 200px;
+    background-color: white;
+    border: 1px solid black;
+}
+#autosuggest {
+    background-color: #dedede;
+    display: none;
+    position: absolute;
+    font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
+    padding: 2px;
+    margin: 2px;
+}
+#autosuggest ul {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    list-style: none;
+}
+#autosuggest ul li {
+    padding: 3px;
+}
+#autosuggest ul li.selected {
+    background-color: #bbb;
+    border-radius: 2px;
+    padding: 3px;
 }
