--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
         script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
         script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js')
         script(type='text/javascript', src='/javascripts/script.js')
+        script(type='text/javascript', src='/javascripts/rangy-core.js')
     body
         a#logo(href='/')
             img(src='/images/logo.png')
